# trogon

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
examples/: README.md  argv.py  change_default_theme.py  custom_param_type.py  default_args_groups.py  demo.py  demo_argparse.py  demo_argv.py  demo_click.py  demo_click_nogroup.py  demo_myke.py  demo_typer.py  demo_yapx.py  nargs_minus_one.py  no_args_commands.py  nogroup_demo.py  prog_name_detector.py  requirements.txt  typer.py
tests/: test_help.py  test_help_argparse.py  test_lazy_command.py  test_run_command.py
textual_click/: __init__.py  constants.py  form.py  introspect.py  run_command.py  textual_click.py  textual_click.scss
textual_click/widgets/: checkbox_set.py  command_info.py  command_tree.py  form.py  form_control.py  multiple_choice.py  multiple_input.py  parameter_controls.py
trogon/: __init__.py  argparse.py  click.py  constants.py  detect_run_string.py  introspect.py  run_command.py  schemas.py  trogon.py  trogon.scss  typer.py
trogon/widgets/: about.py  command_info.py  command_tree.py  form.py  parameter_controls.py
