[tool.poetry]
name = "trogon"
version = "0.1.0"
description = ""
authors = ["Darren Burns <darrenb900@gmail.com>"]
readme = "README.md"
packages = [{include = "trogon"}]

[tool.poetry.dependencies]
python = "^3.7"
textual = {extras = ["dev"], version = ">=0.25.0"}
#textual = {extras = ["dev"], path = "../textual", develop = true}
click = ">=8.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
