[tool.poetry]
name = "trogon"
version = "0.6.0"
description = "Automatically generate a Textual TUI for your Click CLI"
authors = ["Darren Burns <darrenb900@gmail.com>"]
readme = "README.md"
packages = [{include = "trogon"}]
license = "MIT"
homepage = "https://github.com/Textualize/trogon"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.dependencies]
python = "^3.8.1"
textual = ">=0.61.0"
click = ">=8.0.0"

typer = {version = ">=0.9.0", optional = true}

[tool.poetry.extras]
typer = ["typer"]


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
pytest = ">=8.0.0"
textual-dev = ">=1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
